--- a/Tela cadastro/styles/cadastro.css
+++ b/Tela cadastro/styles/cadastro.css
@@ -15,7 +15,7 @@ body {
     font-weight: 700;
 }
 
-.lado-esquerdo {
+.fazerCadastro {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -76,7 +76,6 @@ input[type="checkbox"] {
     cursor: pointer;
     width: 25px;
 }
-
 .lembrar-usuario {
     display: flex;
     flex-direction: row;
@@ -230,6 +229,31 @@ input[type="checkbox"] {
         text-align: center;
     }
 }
+
+/* MELHORIAS POSSÍVEIS MOBILE */
+/* @media(max-width: 770px) {
+    .container-cadastro {
+        grid-template-columns: 1fr;
+
+        height: 100%;
+    }
+
+    .lado-direito {
+        display: none;
+    }
+
+    .lado-esquerdo {
+        height: 100vh;
+        background-image: url(../assets/cinema.webp);
+    }
+
+    .fazerCadastro {
+        background-color: var(--branco);
+        margin: 10%;
+        padding: 5%;
+        border-radius: 20px;
+    }
+} */
 
 
 
