--- a/Tela Seguindo/styles/style.css
+++ b/Tela Seguindo/styles/style.css
@@ -338,7 +338,7 @@ body {
 
 .review-card {
     background-color: #1d1d1d;
-    border: 1px solid #333;
+    /* border: 1px solid #333; */
     border-radius: 10px;
     padding: 20px;
     width: 100%;
@@ -346,6 +346,8 @@ body {
     margin: 0 auto;
     /* Centraliza os cards */
     box-sizing: border-box;
+
+    box-shadow: 2px 2px 5px #000000, -2px -2px 5px #4646465a;
 }
 
 .review-header {
@@ -371,6 +373,7 @@ body {
     display: block;
     font-weight: bold;
     font-size: 1.1rem;
+    color: #ECECEC;
 }
 
 .review-user-profile-link {
@@ -420,6 +423,7 @@ body {
 .review-movie-title {
     font-size: 1.5rem;
     margin: 0 0 10px 0;
+    color: #ECECEC;
 }
 
 .review-movie-rating {
@@ -484,6 +488,93 @@ body {
     color: #fff;
 }
 
+#modalReview p{
+    color: #ECECEC;
+}
+
+#modalReview{
+      z-index: 1000;
+      background-color: #1d1d1d;
+      padding: 20px;
+      border: 1px solid #ccc;
+      width: 60vw;
+      height: 80vh;
+
+      overflow-y: scroll;
+      border-radius: 5px;
+}
+
+::-webkit-scrollbar{
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb{
+    width: 8px;
+    background-color: rgb(75, 75, 75);
+    border-radius: 5px;
+}
+
+#modalReview .information {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+#modalReview .information .information-right{
+    display: flex;
+    flex-direction: column;
+}
+
+#modalReview .information img{
+    height: 50vh;
+    width: 22vw;
+    border-radius: 4px;
+}
+
+#modalReview .container-actions{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 5vw;
+}
+
+#modalReview .card-reviews{
+    display: flex;
+    flex-direction: row;
+    width: 20vw;
+    gap: 20px;
+}
+
+#modalReview .card-reviews .card{
+    height: 100%;
+    width: 50%;
+     box-shadow: 2px 2px 5px #000000, -2px -2px 5px #4646465a;
+    border-radius: 5px;
+}
+
+#modalReview .card-reviews .card p{
+    text-align: center;
+    color: #ECECEC;
+}
+
+#modalReview .container-actions .button-reviews{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 60%;
+}
+
+#modalReview .container-actions .button-reviews button{
+    background-color: #D32F2F;
+    color: #ECECEC;
+    border: none;
+    padding: 10px 25px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 0.9rem;
+    transition: background-color 0.3s ease;
+}
 
 /* --- ESTILOS DO FOOTER --- */
 .main-footer {
@@ -598,7 +689,7 @@ body {
     width: 100%;
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 800px){
     .logo{
         height: 80px;
     }
