--- a/Tela cadastro/styles/cadastro.css
+++ b/Tela cadastro/styles/cadastro.css
@@ -217,6 +217,10 @@ input[type="checkbox"] {
 }
 
 @media(max-width: 770px) {
+    .titulo{
+        font-size: 2.19rem;
+    }
+    
     .titulo {
         text-align: center;
     }
@@ -264,5 +268,15 @@ input[type="checkbox"] {
 
     .possui-conta {
         font-size: 0.98rem;
+    }
+}
+
+@media(max-width: 670px){
+    .titulo{
+        font-size: 2.1rem;
+    }
+
+    header {
+        width: 95%;
     }
 }
