--- a/Tela cadastro/styles/cadastro.css
+++ b/Tela cadastro/styles/cadastro.css
@@ -273,10 +273,14 @@ input[type="checkbox"] {
 
 @media(max-width: 670px){
     .titulo{
-        font-size: 2.1rem;
+        font-size: 1.9rem;
     }
 
     header {
         width: 95%;
+    }
+
+    .possui-conta {
+        font-size: 0.80rem;
     }
 }
