--- a/Tela Perfil/Styles/styles.css
+++ b/Tela Perfil/Styles/styles.css
@@ -7,15 +7,27 @@ body {
 
 /* --- ESTILOS DO HEADER --- */
 .main-header {
-    background-color: #1d1d1d;
-    padding: 0 40px;
-    /* Padding horizontal */
+    display: flex;
     height: 10vh;
     /* Altura fixa para o header */
-    display: flex;
-    justify-content: space-between;
+    width: 100%;
+    background-color: #1d1d1d;
+    justify-content: center;
     align-items: center;
     border-bottom: 1px solid #333;
+    gap: 40px;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+}
+
+.conteiner-header {
+    display: flex;
+    align-items: center;
+    width: 96.5%;
+    gap: 50px;
+    justify-content: space-between;
+
 }
 
 .barra-topo {
@@ -23,7 +35,7 @@ body {
 }
 
 .logo {
-    height: 120px;
+    height: 60px;
     /* Altura ajustada do logo */
     width: auto;
 }
@@ -54,6 +66,7 @@ body {
     outline: none;
     transition: all 0.3s ease;
     color: #fff;
+    position: relative;
 }
 
 .barra-pesquisa input:focus {
@@ -65,6 +78,11 @@ body {
     color: #ccc;
 }
 
+.search-icon {
+    position: absolute;
+    top: 9px;
+    left: 10px;
+}
 
 .acoes-usuario {
     display: flex;
@@ -185,25 +203,52 @@ body {
 .conteiner-perfil {
     display: flex;
     flex-direction: column;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0);
     width: auto;
     height: auto;
+
+    padding: 2%;
+
+}
+
+.img-nome-perfil {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 0px;
 }
 
 .painel-perfil {
     display: flex;
+    position: absolute;
     flex-direction: column;
-    background-color: #c52020;
     width: 100%;
     height: 30%;
     margin-bottom: 10px;
+    position: relative;
+
+}
+
+.foto-perfil {
+    width: 100px;
+    position: absolute;
+    bottom: 70px;
+}
+
+.nome {
+    margin-top: 60px;
 }
 
 .parte-cima {
     display: flex;
-    background-color: #ff00d0;
+    background-image: url(./img/Rectangle\ 146.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
     height: 70%;
+    border-radius: 30px 30px 0 0;
+    border: 1px solid rgba(93, 93, 93, 0.364);
+    border-bottom: 0;
 }
 
 .parte-baixo {
@@ -214,6 +259,9 @@ body {
     align-items: center;
     width: 100%;
     height: 30%;
+    border-radius: 0 0 30px 30px;
+    border: 1px solid rgb(56, 56, 56);
+    border-top: 0;
 }
 
 .itens-perfil {
@@ -230,23 +278,35 @@ body {
     align-items: center;
 }
 
+.infoUser {
+    font-size: 1.2rem;
+    font-weight: 550;
+}
+
+
 .numero {
+    font-size: 1.1rem;
+    font-weight: 500;
     display: flex;
     margin-top: 5px;
 }
 
-.editar-perfil {
-    width: 8%;
-    height: 40%;
-    background-color: #c52020;
+.bt-editar-perfil {
+    min-width: 80px;
+    width: 100px;
+    max-width: 100px;
+    height: 30%;
+    background-color: #D32F2F;
     border-radius: 5px;
     border-color: transparent;
     color: #ffffff;
     position: relative;
 }
 
-.editar-perfil ::
-
+.bt-editar-perfil:hover {
+    background-color: #b71c1c;
+    cursor: pointer;
+}
 
 
 .following-section {
@@ -473,4 +533,77 @@ body {
     font-size: 0.95rem;
     line-height: 1.6;
     color: #e0e0e0;
+}
+
+@media screen and (max-width: 900px) {
+
+    .conteiner-perfil {
+        max-width: auto;
+    }
+
+    .painel-perfil {
+        width: 100%;
+        height: 20%;
+    }
+
+    .logo {
+        height: 80px;
+    }
+
+    .barra-pesquisa input {
+        display: none;
+    }
+
+    .search-icon {
+        display: none;
+    }
+
+    .itens-perfil {
+        gap: 12px;
+    }
+
+    .foto-perfil{
+        bottom: 50px;
+    }
+    .infoUser {
+        font-size: 0.9rem;
+    }
+
+    .numero {
+        font-size: 0.8rem;
+        margin-top: -5px;
+    }
+
+    /* Card comentario */
+    .review-body {
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .sidebar {
+        position: absolute;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .painel-perfil {
+        width: 100%;
+        height: 15%;
+    }
+
+    .foto-perfil {
+        width: 15%;
+        bottom: 40px
+    }
+
+    .numero {
+        margin-top: -10px;
+    }
+
+    .bt-editar-perfil {
+        font-size: 0.7rem;
+        max-width: 10%;
+    }
+
 }
