Integração do sistema de cadastro

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -52,7 +52,7 @@
                 @* <button type="submit" class="botao-login" onclick="Login()">Entrar</button> *@
                 <button type="submit" class="botao-login">Entrar</button>
 
-                <p class="registrar">Não tem uma conta ? <a href="#" class="">Registre-se</a></p>
+                <p class="registrar">Não tem uma conta ? <a href="~/Cadastro/Index" class="">Registre-se</a></p>
             </form>
             <div class="redes-sociais">
                 <a href="#" class="google">
